--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==4.0.0
 chart-studio==1.1.0
 click==7.1.2
 dash==1.20.0
+dash-bootstrap-components==0.12.2
 dash-core-components==1.16.0
 dash-html-components==1.1.3
 dash-renderer==1.9.1
